更新格式化脚本

--- a/format/info.plist
+++ b/format/info.plist
@@ -4,8 +4,6 @@
 <dict>
 	<key>bundleid</key>
 	<string></string>
-	<key>category</key>
-	<string>Tools</string>
 	<key>connections</key>
 	<dict>
 		<key>C5BA1FB3-D1AE-4DC0-BBB2-090ABBF155F1</key>
@@ -61,11 +59,18 @@
 				<string></string>
 				<key>script</key>
 				<string>&lt;?php
+
+$query = $argv[1];
+
+echo $query;
+
+?&gt;&lt;?php
 /**
  * @author: justwkj
  * @date: 2020/7/22 13:17
+ * @update_date: 2020/10/28 11:16
  * @email: justwkj@gmail.com
- * @desc:
+ * @desc: 格式化复制的数据
  */
 
 
@@ -86,23 +91,34 @@ function outputJson($data) {
     die;
 }
 
-
 $query = empty($argv[1]) ? '' : $argv[1];
 $input = shell_exec('pbpaste');
 
+
 $array = array_filter(preg_split('/\s+/', $input));
 
-$joinSeparated = $query == '"' ? '"' : "'";
+if ($query==='"' || $query ==="'") {
+    $joinSeparated = $query == '"' ? '"' : "'";
+} else {
+    $joinSeparated = $query;
+}
+
 
 $str = '';
-foreach ($array as $item) {
-    $str .= sprintf('%s%s%s,' . PHP_EOL, $joinSeparated, $item, $joinSeparated);
+if($query==='"' || $query ==="'"){
+    $tmp = [];
+    foreach ($array as $item) {
+        $format = '%s%s%s';
+        $tmp[] = sprintf($format, $joinSeparated, $item, $joinSeparated);
+    }
+    $str = implode(','.PHP_EOL, $tmp);
+} else {
+    $str = implode($joinSeparated, $array);
 }
 outputJson([[
     "title" =&gt; '格式化完毕:' . $str,
     "arg"   =&gt; $str,
 ]]);
-
 </string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
@@ -131,6 +147,8 @@ outputJson([[
 				<false/>
 				<key>clipboardtext</key>
 				<string>{query}</string>
+				<key>ignoredynamicplaceholders</key>
+				<false/>
 				<key>transient</key>
 				<false/>
 			</dict>
